--- a/industries.html
+++ b/industries.html
@@ -36,7 +36,7 @@
         </button>
         <ul class="dropdown-menu" role='menu' style="z-index: 1000000;">
           <li>
-            <a href="#">Gk-II Telecom</a>
+            <a href="#">GKK Technologies</a>
           </li>
         </ul>
       </div>
@@ -92,7 +92,7 @@
 
     <div class="container-fluid navigation-fixed" id="navigationbar" style="background-color:rgb(0, 9, 63)">
             <a href="#" id="logo">
-        <img src="images/06.png" alt="" id="LogoImage" class="img-responsive" width="300px" height="70px" >
+      <img src="images/07.png" alt="" id="LogoImage" class="img-responsive" width="160px" height="50px" >
             </a>
 
             <input type="checkbox" name="" id="menubar" onclick="ShowMenu()">
@@ -100,40 +100,40 @@
             <nav id="menu-wrap">
               <ul id="menu">
                 <li>
-                  <a href="index.html"><b>Home</b></a>
+                  <a href="Home.php"><b>Home</b></a>
                 </li>
                 <li class="has-children" id="About-Menu">
-                  <a href="index.html"><b>About Us <i class="fa fa-caret-down" aria-hidden="true" style="color:white; margin-left:4px"></i></b></a>
+                  <a href="Home.php"><b>About Us <i class="fa fa-caret-down" aria-hidden="true" style="color:white; margin-left:4px"></i></b></a>
                   <ul id="Aboutus-Submenu" class="open-menu">
                     <li>
-                      <a href="index.html" >Overview</a>
+                      <a href="Home.php" >Overview</a>
                     </li>
                     <li>
-                      <a href="index.html" >Mission, Vision and Values</a>
+                      <a href="Home.php" >Mission, Vision and Values</a>
                     </li>
                   </ul>
                 </li>
                 <li class="has-children" >
-                  <a href="index.html" ><b>Services and Solutions
+                  <a href="Home.php" ><b>Services and Solutions
                     <i class="fa fa-caret-down" aria-hidden="true" style="color:white; margin-left:4px"></i></b>
                   </a>
                   <ul id="Services-Submenu" class="open-menu">
                     <li>
-                        <a href="index.html" >IT Consulting</a>
+                        <a href="Home.php" >IT Consulting</a>
                     </li>
                     <li class="has-children">
-                      <a href="index.html">Telecom Implementation</a>
+                      <a href="Home.php">Telecom Implementation</a>
 
                     </li>
                     <li class="has-children">
-                      <a href="index.html" >Operation and Maintainance</a>
+                      <a href="Home.php" >Operation and Maintainance</a>
 
                     </li>
                     <li>
-                      <a href="index.html" > Engineering Solutions</a>
+                      <a href="Home.php" > Engineering Solutions</a>
                     </li>
                     <li>
-                        <a href="index.html">Staffing</a>
+                        <a href="Home.php">Staffing</a>
                     </li>
                   </ul>
                 </li>
@@ -158,7 +158,7 @@
                   </ul>
                 </li>
                 <li>
-                  <a href="index.html" ><b>Contact</b></a>
+                  <a href="Home.php" ><b>Contact</b></a>
                 </li>
               </ul>
             </nav>
@@ -174,7 +174,7 @@
 
             </div>
            <!-- <div class="other-links">
-                <a href="index.html">Home</a>
+                <a href="Home.php">Home</a>
                 <a href="industries.html">Industries</a>
             </div>-->
 
@@ -290,7 +290,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 setMargin" >
-                    <img src="images/TELECOM_Industry.jpg" alt="" width="400" height="500">
+                    <img src="images/optandMaint.jpg" alt="" width="450" height="500">
                 </div>
             </div>
         </div>
@@ -348,13 +348,13 @@
     <div id="Last" class="container-fluid" style="background-color:black">
       <div class="row footer-content">
         <div class="col-sm-2 aligndiv">
-           <img src="images/06.png" alt="" width="250px" height="70px" >
+           <img src="images/07.png" alt="" id="LogoImage"  width="200px" height="90px" >
         </div>
 
         <div class=" col-sm-3 aligndiv">
           <h5 style="color:whitesmoke">ADDRESS </h5>
           <div style="color:white; margin-top:10px;">
-            <strong>GK & K Associates (Thailand) Co. Ltd</strong>
+            <strong>GK & K Associates (Thailand) Co., Ltd</strong>
             <br> 61/62 Moo.5, Lat Sawai, Lum Luk Ka District, Pathum Thani, Thailand-12150
           </div>
         </div>
@@ -369,7 +369,7 @@
 
         <div class="col-sm-3 aligndiv">
           <h5 style="color:whitesmoke">Subsidiaries</h5>
-          <a href="#" style="color:white">GK II- Technologies</a>
+          <a href="#" style="color:white">GKK Technologies</a>
         </div>
       </div>
     </div>
