--- a/industries.html
+++ b/industries.html
@@ -298,7 +298,7 @@
         <div class="container-fluid setMargin">
         <div class="row setMargin" id="Logistics">
             <div class=" col-sm-offset-1 col-sm-4 setMargin">
-                <img src="images/Logistics_Image.jpg" alt="" width="400" height="300">
+                <img src="images/customs-regulations1.jpg" alt="" width="400" height="300">
             </div>
             <div class="col-sm-6 Section-Title desc">
                 <h3><b>Logistics</b></h3>
